Added '~mardev docs' and 'learning-hoon' links.

--- a/urbit-doc-links.html
+++ b/urbit-doc-links.html
@@ -85,6 +85,10 @@ function github(url)
 
   <a href="javascript:github('https://github.com/keatondunsford/feed')">:feed code</a>
 
+  <a target="contents" href="http://mardev.urbit.org/docs/">~mardev docs</a>
+
+  <a href="javascript:github('https://github.com/knubie/learning-hoon')">learning-hoon</a>
+
 </div>
 
 <div class="content">
