Added ~hidduc-posmeg (pre-breach, now ~fosnut-dandut) notes.

--- a/urbit-doc-links.html
+++ b/urbit-doc-links.html
@@ -89,6 +89,8 @@ function github(url)
 
   <a href="javascript:github('https://github.com/knubie/learning-hoon')">learning-hoon</a>
 
+  <a target="contents" href="https://fosnut-dandut.urbit.org/pages/hidducs-notes/tutorial">~hidducs-notes</a>
+
 </div>
 
 <div class="content">
