Drats, some links (in the loaded iframe) can't be opened within an iframe (bitbucket.org).  Note this.

--- a/urbit-doc-links.html
+++ b/urbit-doc-links.html
@@ -69,7 +69,9 @@ function github(url)
 
 <div class="header">
 
-  <p>GitHub links open in a (shared) tab.  Other links open in the iframe below.</p>
+  <p>GitHub links open in a (shared) tab.  Other links open in the iframe below.
+  Some links <i>within</i> the iframe won't load (e.g, bitbucket.org);
+  open in new tab instead.</p>
 
   <a target="contents" href="http://urbit.org/docs/hoon/reference/">twigs 1</a>
 
